feat: Change background image

--- a/graphics/css/common~DS_1~HD_1~HD_2~HD_3~SD_1~SD_3~SD_3_pickup~Setup.css
+++ b/graphics/css/common~DS_1~HD_1~HD_2~HD_3~SD_1~SD_3~SD_3_pickup~Setup.css
@@ -42,4 +42,4 @@ body {
 
 .parent[data-v-36eceeca]{display:flex;white-space:nowrap}
 .tweet[data-v-3bb9e9eb]{position:absolute;display:flex;margin:0;padding:0;top:0px;left:0px;width:auto;height:auto;flex-direction:column;background-color:#fff;justify-content:left;font-family:"mplus-1c-medium";overflow:hidden;z-index:0;font-size:24px;color:#000;font-weight:bold;line-height:32px}.name[data-v-3bb9e9eb]{overflow:hidden;white-space:nowrap;text-overflow:ellipsis}.text[data-v-3bb9e9eb]{display:-webkit-box;-webkit-box-orient:vertical;-webkit-line-clamp:3}
-.twitter-enter-active[data-v-3314872e]{transition:all 1s}.twitter-leave-active[data-v-3314872e]{transition:all 1s}.twitter-enter[data-v-3314872e],.twitter-leave-to[data-v-3314872e]{transform:translateY(-100%)}
+.twitter-enter-active[data-v-9e60c7ba]{transition:all 1s}.twitter-leave-active[data-v-9e60c7ba]{transition:all 1s}.twitter-enter[data-v-9e60c7ba],.twitter-leave-to[data-v-9e60c7ba]{transform:translateY(-130%);opacity:0}
